<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rcl_logging_syslog</name>
  <version>0.1.1</version>
  <description>Implementation of rcl_logging API for an syslog/rsyslog backend.</description>

  <maintainer email="tomoya.fujita825@gmail.com">Tomoya Fujita</maintainer>

  <license>Apache License 2.0</license>

  <author email="tomoya.fujita825@gmail.com">Tomoya Fujita</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rcl_logging_interface</depend>
  <depend>rcpputils</depend>
  <depend>rcutils</depend>

  <exec_depend>rsyslog</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>performance_test_fixture</test_depend>

  <member_of_group>rcl_logging_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
